fix: fixed label alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ label {
   display: block;
   margin-bottom: 8px;
   font-weight: bold;
+  text-align: left;
 }
 
 input, textarea {
